views/login.css
:root{
    --font-title: "Mochiy Pop One", sans-serif;
   --font-basic: "Heebo", sans-serif;

   --color-blue : #76B7CE;
   --color-white : #F5F0E4;
   --color-maroon : #AB6037 ;
   --color-green : #AAB357 ;
   --color-yellow : #DDBA7F ;

   --font-title-size : 32px;
   --font-subtitle-size : 24px;
   --font-text-size: 12px;
   --font-small-size: 8px;
}


h1{
    color: #FFFFFF;
    font-family: "Mochiy Pop one", sans-serif;
    font-size: 24px;
    text-align: center;
    margin-top: 15px;
}


.sinscrire{
    color:#FFFFFF;
    background-color: #93c7da;
    border-radius: 30px;
    padding: 20px 80px;
    font-family: "Mochiy Pop One", sans-serif;
    border: 4px solid #FFFFFF;
    font-size: 16px;
}

.seconnecter{
    color:#FFFFFF;
    text-decoration: none;
    background-color: #93c7da;
    border-radius: 30px;
    padding: 20px 66px;
    font-family: "Mochiy Pop One", sans-serif;
    border: 4px solid #FFFFFF;
    font-size: 16px;

}

.boutons{
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 20px;
    margin-top: 90px;
}

.logo_mapang{
    height: 90px;
    display: block;
    margin-top: 50px;
}


.background_login {
    position: relative;
    width: 100%;
    height: 100vh;
    overflow: hidden;
    display: flex;
    flex-direction: column;
    align-items: center;
     padding-top: 60px;
}

.fond_login {
    position: absolute;
    inset: 0;
    width: 100%;
    height: 100%;
    object-fit: cover;
    z-index: -1;
}

.separation_btn {
    display: flex;
    align-items: center;
    width: 100%;
    justify-content: center;
    margin: 0;
    font-family: "Mochiy Pop One", sans-serif;
    color: #FFFFFF;
    font-size: 14px;
}

.separation_btn::before,
.separation_btn::after {
    content: "";
    flex: 1;
    height: 3px;
    border-radius: 2px;
    background-color: #FFFFFF;
}

.separation_btn::before {
    margin-right: 10px;
}

.separation_btn::after {
    margin-left: 10px;
}

